fixing on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -224,7 +224,7 @@ span {
   position: absolute;
   top: 50%;
   left: 50%;
-  width:calc(100vh - 40%);
+  width:60%;
   transform: translate(-50%, -50%);
 }
 
@@ -248,6 +248,7 @@ span {
   #container img{
     width:calc(100hh);
   }
+
 }
 
 }
@@ -262,23 +263,25 @@ span {
 @media (max-width: 768px) {
   .boardtext {
     margin: 0 0 7% 0;
-    font-size: 48px;
+    font-size: 30px;
     font-weight: 700;
-    line-height: 56px;
+    line-height: 36px;
     font-family: "Philosopher", sans-serif;
     color: white;
+    text-align: center;
   }
 
 }
 
 @media (max-width: 550px) {
-  .boardtext {
+  .centered {
     margin: 0 0 7% 0;
-    font-size: 36px;
+    font-size: 22px;
     font-weight: 700;
-    line-height: 56px;
+    line-height: 26px;
     font-family: "Philosopher", sans-serif;
     color: white;
+    width:55%;
   }
 
 }
